Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93944

error: "NOMINMAX" redefined

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 6.1.1, 6.2.0 Alpha
    • 6.2.0 FF
    • Active Qt
    • None
    • bd8ea10cf6bb4532931fd733cbf35a5c33fb6189 (qt/qtactiveqt/dev) e997284ee33c6d8a53bceaef5df3b85b91e97682 (qt/qtactiveqt/6.1)

    Description

      agent:2021/05/21 05:28:19 build.go:391: FAILED: sccache C:\MINGW810\mingw64\bin\g++.exe -DMINGW_HAS_SECURE_API=1 -DQAXSERVER -DQAX_SERVER -DQT_ASCII_CAST_WARNINGS -DQT_AXBASE_LIB -DQT_BUILDING_QT -DQT_BUILD_AXSERVER_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NEEDS_QMAIN -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_USE_QSTRINGBUILDER -DQT_WIDGETS_LIB -DUNICODE -DWIN32 -DWIN64 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_USE_MATH_DEFINES -D_WIN32_WINNT=0x0601 -D_WIN64 -Isrc/activeqt/control/AxServer_autogen/include -Iinclude -Iinclude/QtAxServer -I/Users/qt/work/qt/qtactiveqt/src/activeqt/control -Isrc/activeqt/control -Iinclude/QtAxServer/6.2.0 -Iinclude/QtAxServer/6.2.0/QtAxServer -Iinclude/QtAxBase -Isrc/activeqt/axbase -Iinclude/QtAxBase/6.2.0 -Iinclude/QtAxBase/6.2.0/QtAxBase -isystem C:/Users/qt/work/install/include/QtCore -isystem C:/Users/qt/work/install/include -isystem C:/Users/qt/work/install/mkspecs/win32-g++ -isystem C:/Users/qt/work/install/include/QtGui -isystem C:/VulkanSDK/1.0.51.0/Include -isystem C:/Users/qt/work/install/include/QtWidgets -isystem C:/Users/qt/work/install/include/QtCore/6.2.0 -isystem C:/Users/qt/work/install/include/QtCore/6.2.0/QtCore -isystem C:/Users/qt/work/install/include/QtGui/6.2.0 -isystem C:/Users/qt/work/install/include/QtGui/6.2.0/QtGui -isystem C:/Users/qt/work/install/include/QtWidgets/6.2.0 -isystem C:/Users/qt/work/install/include/QtWidgets/6.2.0/QtWidgets -g -DNDEBUG -O2 -fvisibility=hidden -fno-keep-inline-dllexport -Wall -Wextra -fno-exceptions -Wno-error=invalid-offsetof -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -Wno-error=implicit-fallthrough -std=c++17 -Winvalid-pch -include C:/Users/qt/work/qt/qtactiveqt/src/activeqt/control/CMakeFiles/AxServer.dir/cmake_pch.hxx -MD -MT src/activeqt/control/CMakeFiles/AxServer.dir/qaxserverbase.cpp.obj -MF src\activeqt\control\CMakeFiles\AxServer.dir\qaxserverbase.cpp.obj.d -o src/activeqt/control/CMakeFiles/AxServer.dir/qaxserverbase.cpp.obj -c /Users/qt/work/qt/qtactiveqt/src/activeqt/control/qaxserverbase.cpp
      agent:2021/05/21 05:28:19 build.go:391: /Users/qt/work/qt/qtactiveqt/src/activeqt/control/qaxserverbase.cpp:51: error: "NOMINMAX" redefined [-Werror]
      agent:2021/05/21 05:28:19 build.go:391:  #define NOMINMAX
      agent:2021/05/21 05:28:19 build.go:391:  
      agent:2021/05/21 05:28:19 build.go:391: In file included from C:/MINGW810/mingw64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/x86_64-w64-mingw32/bits/c++config.h:508,
      agent:2021/05/21 05:28:19 build.go:391:                  from C:/MINGW810/mingw64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/type_traits:38,
      agent:2021/05/21 05:28:19 build.go:391:                  from C:/Users/qt/work/install/include/QtCore/qglobal.h:45,
      agent:2021/05/21 05:28:19 build.go:391:                  from C:/Users/qt/work/install/include/QtCore/QtCore:4,
      agent:2021/05/21 05:28:19 build.go:391:                  from include/QtAxBase/QtAxBaseDepends:3,
      agent:2021/05/21 05:28:19 build.go:391:                  from C:/Users/qt/work/qt/qtactiveqt/include/QtAxBase/QtAxBase:3,
      agent:2021/05/21 05:28:19 build.go:391:                  from C:/Users/qt/work/qt/qtactiveqt/src/activeqt/control/CMakeFiles/AxServer.dir/cmake_pch.hxx:5,
      agent:2021/05/21 05:28:19 build.go:391:                  from <command-line>:
      agent:2021/05/21 05:28:19 build.go:391: C:/MINGW810/mingw64/lib/gcc/x86_64-w64-mingw32/8.1.0/include/c++/x86_64-w64-mingw32/bits/os_defines.h:45: note: this is the location of the previous definition
      agent:2021/05/21 05:28:19 build.go:391:  #define NOMINMAX 1
      

      Build log: https://testresults.qt.io/logs/qt/qtactiveqt/e592d19c1555fa2690177971117003fef92abc94/WindowsWindows_10x86_64WindowsWindows_10x86_64Mingwqtci-windows-10-x86_64-52-a7bb80InsignificantTests_Sccache/826cede27a1d0fd3889074fd72b79eade288c0dd/build_1621578281/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtactiveqt/tasks/1621577224

      Tested changes (refs/builds/qtci/dev/1621574170):
      https://codereview.qt-project.org/c/qt/qtactiveqt/+/350413/1 Update dependencies on 'dev' in qt/qtactiveqt

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes