Fix compile error due to redefinition of NOMINMAX (MinGW)

Amends qtactiveqt/81139fb65dd2dd2713029c0fea3b42d0c7bbad79 .

Pick-to: 6.1
Fixes: QTBUG-93944
Change-Id: I687d95659fbcbd38df38976fae98c2a9c615c4a6
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>